--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 <p id="address"> Aracruz </p>
 
-<script language="Javascript" src="http://geoplugin.net/javascript.gp" type="text/javascript"></script>
+<script language="Javascript" src="https://geoplugin.net/javascript.gp" type="text/javascript"></script>
 
 <script>
 // certifique-se de que o DOM esteja totalmente carregado antes de executar o código
